# video_game_library_app

./: .gitignore  AGENTS.md  BACKLOG.md  README.md  pyproject.toml
docs/: project_context.md
frontend/: FRONTEND_GUIDE.MD
frontend/src/app/: GameCard.tsx  page.tsx
frontend/src/components/: SearchBar.tsx
frontend/src/types/: videoGame.ts
src/: main.py
src/application/: dtos.py  errors.py  external_game_service.py  game_use_cases.py
src/documentation/: architecture.md
src/domain/: entities.py  repositories.py
src/infrastructure/databases/: models.py  sessions.py
src/infrastructure/external_apis/: dtos.py  rate_limiter.py  rawg_client.py
src/infrastructure/repositories/: game_repository.py
src/presentation/: auth.py  routes.py  schemas.py
tests/: fakes.py  test_game_service.py  test_rate_limiter.py  test_routes.py
