[project]
name = "video-game-library-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Joel Martinez",email = "joel.martinez44@ymail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)"
]
