[project]
name = "video-game-library-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Joel Martinez",email = "joel.martinez44@ymail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)"
]
