[project]
name = "video-game-library-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Joel Martinez",email = "joel.martinez44@ymail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pylint (>=4.0.4,<5.0.0)"
]
